# piscine-rust

./: .gitignore  Cargo.toml  README
arrange_it/src/: lib.rs
arrays/src/: lib.rs
banner/src/: lib.rs
bigger/src/: lib.rs
blood_types/src/: lib.rs
borrow_box/src/: lib.rs
borrow_me_the_reference/src/: lib.rs  main.rs
box_it/src/: lib.rs
box_recursion/src/: lib.rs
brackets_matching/src/: main.rs
brain_fuck/src/: main.rs
capitalizing/src/: lib.rs
card_deck/src/: lib.rs
changes/src/: lib.rs
circle/src/: lib.rs
collect/src/: lib.rs
commits_stats/: Cargo.toml
commits_stats/src/: lib.rs  main.rs
copy/src/: lib.rs
counting_words/src/: lib.rs  main.rs
delete_prefix/src/: lib.rs
diamond_creation/src/: lib.rs
display_table/src/: lib.rs
does_it_fit/src/: lib.rs
drop_the_thread/src/: lib.rs
easy_traits/src/: lib.rs
edit_distance/src/: lib.rs
expected_variable/: Cargo.toml
expected_variable/src/: lib.rs
fibonacci2/src/: lib.rs
filter_table/src/: lib.rs
find_factorial/src/: lib.rs
flat_tree/src/: lib.rs
generics_list/src/: lib.rs
get_products/src/: lib.rs
groceries/src/: lib.rs
handling/src/: lib.rs
hashing/src/: lib.rs
how_many_references/src/: lib.rs
insertion_sort/src/: lib.rs
inv_pyramid/src/: lib.rs
lalgebra_scalar/src/: lib.rs
lalgebra_vector/src/: lib.rs
lifetimes/src/: lib.rs
logic_number/src/: lib.rs
looping/src/: main.rs
lunch_queue/src/: lib.rs
matrix/src/: mult.rs  ops.rs
matrix_determinant/src/: lib.rs
matrix_display/src/: lib.rs
minor/: Cargo.toml
score/: Cargo.toml
(+51 files in other folders)
