[workspace]

members = ["scalar", "temperature_conv", "speed_transformation", "looping", "groceries", "reverse_string", "find_factorial", "fibonacci2", "matrix_transposition", "division_and_remainder", "tuples_refs", "borrow", "doubtful", "to_url", "string_literals", "name_initials", "ownership", "copy", "borrow_me_the_reference", "tic_tac_toe", "arrange_it", "changes", "reverse_it", "bigger", "capitalizing", "circle", "card_deck", "arrays", "strings", "edit_distance", "simple_hash", "string_permutation", "hashing", "collect", "minor", "counting_words", "partial_sums", "inv_pyramid", "insertion_sort", "rpn", "foo", "unwrap_or_expect", "panic", "handling", "profanity_filter", "question_mark", "banner", "cipher", "error_types", "boxing_todo", "middle_day", "does_it_fit", "macro_calculator", "shopping_mall", "expected_variable", "mobs", "atars", "stars"]
